@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2026, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -41,86 +41,14 @@
 package com.oracle.graal.python.builtins.modules.cext;
 
 import static com.oracle.graal.python.builtins.modules.cext.PythonCextBuiltins.CApiCallPath.Direct;
-import static com.oracle.graal.python.builtins.modules.cext.PythonCextBuiltins.CApiCallPath.Ignored;
-import static com.oracle.graal.python.builtins.objects.cext.capi.transitions.ArgDescriptor.Int;
-import static com.oracle.graal.python.builtins.objects.cext.capi.transitions.ArgDescriptor.Long;
-import static com.oracle.graal.python.builtins.objects.cext.capi.transitions.ArgDescriptor.PY_THREAD_TYPE_LOCK;
-import static com.oracle.graal.python.builtins.objects.cext.capi.transitions.ArgDescriptor.Pointer;
 import static com.oracle.graal.python.builtins.objects.cext.capi.transitions.ArgDescriptor.UNSIGNED_LONG;
-import static com.oracle.graal.python.builtins.objects.cext.capi.transitions.ArgDescriptor.Void;
-import static com.oracle.graal.python.builtins.objects.ints.PInt.intValue;
 
-import com.oracle.graal.python.PythonLanguage;
 import com.oracle.graal.python.builtins.modules.cext.PythonCextBuiltins.CApiBuiltin;
-import com.oracle.graal.python.builtins.modules.cext.PythonCextBuiltins.CApiBuiltinNode;
-import com.oracle.graal.python.builtins.objects.cext.capi.CApiContext;
-import com.oracle.graal.python.builtins.objects.thread.PLock;
-import com.oracle.graal.python.runtime.object.PFactory;
-import com.oracle.truffle.api.nodes.EncapsulatingNodeReference;
 
 public final class PythonCextPyThreadBuiltins {
 
-    private static final long LOCK_MASK = 0xA10C000000000000L;
-
-    @CApiBuiltin(ret = PY_THREAD_TYPE_LOCK, args = {}, call = Direct, acquireGil = false, canRaise = false)
-    public static long PyThread_allocate_lock() {
-        CApiContext context = CApiBuiltinNode.getStaticCApiContext();
-        long id = context.lockId.incrementAndGet() ^ LOCK_MASK;
-        PLock lock = PFactory.createLock(PythonLanguage.get(null));
-        context.locks.put(id, lock);
-        return id;
-    }
-
-    @CApiBuiltin(ret = Int, args = {PY_THREAD_TYPE_LOCK, Int}, call = Direct, acquireGil = false, canRaise = true)
-    public static int PyThread_acquire_lock(long id, int waitflag) {
-        CApiContext context = CApiBuiltinNode.getStaticCApiContext();
-        PLock lock = context.locks.get(id);
-        if (lock == null) {
-            throw PythonCextBuiltins.badInternalCall("PyThread_acquire_lock", "lock");
-        }
-        boolean result;
-        if (waitflag != 0) {
-            result = lock.acquireBlocking(EncapsulatingNodeReference.getCurrent().get());
-        } else {
-            result = lock.acquireNonBlocking();
-        }
-        return intValue(result);
-    }
-
-    @CApiBuiltin(ret = Void, args = {PY_THREAD_TYPE_LOCK}, call = Direct, acquireGil = false, canRaise = true)
-    public static void PyThread_release_lock(long id) {
-        CApiContext context = CApiBuiltinNode.getStaticCApiContext();
-        PLock lock = context.locks.get(id);
-        if (lock == null) {
-            throw PythonCextBuiltins.badInternalCall("PyThread_release_lock", "lock");
-        }
-        lock.release();
-    }
-
-    @CApiBuiltin(ret = Long, args = {}, call = Ignored, acquireGil = false, canRaise = false)
-    public static long GraalPyPrivate_tss_create() {
-        return CApiBuiltinNode.getStaticCApiContext().nextTssKey();
-    }
-
-    @CApiBuiltin(ret = Pointer, args = {Long}, call = Ignored, acquireGil = false, canRaise = false)
-    public static long GraalPyPrivate_tss_get(long key) {
-        return CApiBuiltinNode.getStaticCApiContext().tssGet(key);
-    }
-
-    @CApiBuiltin(ret = Int, args = {Long, Pointer}, call = Ignored, acquireGil = false, canRaise = false)
-    public static int GraalPyPrivate_tss_set(long key, long value) {
-        CApiBuiltinNode.getStaticCApiContext().tssSet(key, value);
-        return 0;
-    }
-
-    @CApiBuiltin(ret = Void, args = {Long}, call = Ignored, acquireGil = false, canRaise = false)
-    public static void GraalPyPrivate_tss_delete(long key) {
-        CApiBuiltinNode.getStaticCApiContext().tssDelete(key);
-    }
-
-    @SuppressWarnings("deprecation") // deprecated in JDK19
     @CApiBuiltin(ret = UNSIGNED_LONG, args = {}, call = Direct, acquireGil = false, canRaise = false)
     public static long PyThread_get_thread_ident() {
-        return Thread.currentThread().getId();
+        return Thread.currentThread().threadId();
     }
 }
